# ai-fundamentals-simple

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: Claude_Prompt.md  ai-first-transformation.md  course_agenda.md  enterprise-ai-tools.md  getting_started.md
docs/enterprise/: LLM_Frameworks.md  ai_adoption_guide.md
instructor/: 01-llm-foundations.md  02-agentic-ai.md  03-mcp-implementation.md  04-rag-systems.md  05-enterprise-integration.md  06-pr-faq-validator.md
notes/: Inference.md  Transformers.md
scripts/: build.sh  test.sh
src/: __init__.py  cli.py  logging_config.py  utils.py
tests/: __init__.py  test_cli.py  test_logging_config.py  test_utils.py
